deployments/grafana-ingress/resources/grafana-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: grafana-external
  name: grafana-external
