deployments/grafana-ingress/resources/grafana-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: grafana-external
  namespace: grafana-external
subsets:
- addresses:
  - ip: 10.137.6.231
  ports:
  - name: http
    port: 3000
    protocol: TCP
