deployments/grafana-ingress/resources/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-external
  namespace: grafana-external
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  clusterIP: None
  type: ClusterIP
