deployments/grafana-ingress/resources/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: http-le-production
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    #ingress.kubernetes.io/proxy-body-size: "0"
    #nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: grafana-external
  namespace: grafana-external
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.plasa.cloud
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: grafana-external
                port:
                  number: 3000
  tls:
  - hosts:
    - grafana.plasa.cloud
    secretName: star-plasa-cloud-tls
